ircv3_parse_derive/tests/ui/fail/both_revires.stderr
error: field `msg_id` requires an IRC attribute for ToMessage serialization
  --> tests/ui/fail/both_revires.rs:10:5
   |
10 |     msg_id: MsgId,
   |     ^^^^^^^^^^^^^
